@@ -36,7 +36,9 @@ define('HDOM_INFO_ENDSPACE',7);
 function file_get_html() {
     $dom = new simple_html_dom;
     $args = func_get_args();
-    $dom->load(call_user_func_array('file_get_contents', $args), true);
+    @$dom->load(call_user_func_array('file_get_contents', $args), true);
+    if (($error=error_get_last())!==null)
+        throw new Exception($error['message']);
     return $dom;
 }
 
@@ -48,19 +50,8 @@ function str_get_html($str, $lowercase=true) {
 }
 
 // dump html dom tree
-function dump_html_tree($node, $show_attr=true, $deep=0) {
-    $lead = str_repeat('    ', $deep);
-    echo $lead.$node->tag;
-    if ($show_attr && count($node->attr)>0) {
-        echo '(';
-        foreach($node->attr as $k=>$v)
-            echo "[$k]=>\"".$node->$k.'", ';
-        echo ')';
-    }
-    echo "\n";
-
-    foreach($node->nodes as $c)
-        dump_html_tree($c, $show_attr, $deep+1);
+function dump_html_tree($node, $show_attr=true) {
+    $node->dump($node);
 }
 
 // get dom form file (deprecated)
@@ -112,8 +103,20 @@ class simple_html_dom_node {
     }
     
     // dump node's tree
-    function dump($show_attr=true) {
-        dump_html_tree($this, $show_attr);
+    function dump($show_attr=true, $deep=0) {
+        $lead = str_repeat('    ', $deep);
+
+        echo $lead.$this->tag;
+        if ($show_attr && count($this->attr)>0) {
+            echo '(';
+            foreach($this->attr as $k=>$v)
+                echo "[$k]=>\"".$this->$k.'", ';
+            echo ')';
+        }
+        echo "\n";
+
+        foreach($this->nodes as $c)
+            $c->dump($show_attr, $deep+1);
     }
 
     // returns the parent of node
@@ -392,7 +395,8 @@ class simple_html_dom_node {
         foreach ($matches as $m) {
             $m[0] = trim($m[0]);
             if ($m[0]==='' || $m[0]==='/' || $m[0]==='//') continue;
-            // for borwser grnreated xpath
+
+            // for xpath generated by borwser
             if ($m[1]==='tbody') continue;
 
             list($tag, $key, $val, $exp, $no_key) = array($m[1], null, null, '=', false);
@@ -523,7 +527,7 @@ class simple_html_dom {
     }
 
     // load html from string
-    function load($str, $lowercase=true) {
+    function load($str, $lowercase=true) {            
         // prepare
         $this->prepare($str, $lowercase);
         // strip out comments
@@ -552,7 +556,9 @@ class simple_html_dom {
     // load html from file
     function load_file() {
         $args = func_get_args();
-        $this->load(call_user_func_array('file_get_contents', $args), true);
+        @$this->load(call_user_func_array('file_get_contents', $args), true);
+        if (($error=error_get_last())!==null)
+            throw new Exception($error['message']);
     }
 
     // set callback function
@@ -568,7 +574,7 @@ class simple_html_dom {
     // save dom as string
     function save($filepath='') {
         $ret = $this->root->innertext();
-        if ($filepath!=='') file_put_contents($filepath, $ret);
+        if ($filepath!=='') file_put_contents($filepath, $ret, LOCK_EX);
         return $ret;
     }
 
@@ -970,6 +976,11 @@ class simple_html_dom {
     function getElementsById($id, $idx=null) {return $this->find("#$id", $idx);}
     function getElementByTagName($name) {return $this->find($name, 0);}
     function getElementsByTagName($name, $idx=-1) {return $this->find($name, $idx);}
-    function loadFile() {$args = func_get_args();$this->load(call_user_func_array('file_get_contents', $args), true);}
+    function loadFile() {
+        $args = func_get_args();
+        @$this->load(call_user_func_array('file_get_contents', $args), true);
+        if (($error=error_get_last())!==null)
+            throw new Exception($error['message']);
+    }
 }
 ?>
